Added writers and director to Episode schema
